force-app/main/default/objects/Viajante__c/Viajante__c.object-meta.xml
<CustomObject>
    <label>Viajante</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Número</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Viajantes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>