force-app/main/default/objects/Viajante__c/fields/Respons_vel_financeiro__c.field-meta.xml
<CustomField>
    <fullName>Respons_vel_financeiro__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Responsável financeiro</label>
    <type>Checkbox</type>
</CustomField>