force-app/main/default/objects/Viajante__c/fields/Viagem__c.field-meta.xml
<CustomField>
    <fullName>Viagem__c</fullName>
    <label>Viagem</label>
    <referenceTo>Viagem__c</referenceTo>
    <relationshipLabel>Viajantes</relationshipLabel>
    <relationshipName>Viajantes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>