force-app/main/default/objects/Viajante__c/validationRules/responsavel_financ_nao_preencher.validationRule-meta.xml
<ValidationRule>
    <fullName>responsavel_financ_nao_preencher</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
	!$User.Ignorar_erros__c,
	Respons_vel_financeiro__c == true,
	Viagem__r.Contagem_viajantes_responsavel__c &gt; 0
)</errorConditionFormula>
    <errorDisplayField>Respons_vel_financeiro__c</errorDisplayField>
    <errorMessage>Apenas um usuário deve ser marcado como responsável pelo financeiro da viagem.</errorMessage>
</ValidationRule>